VTK-1623 fix plain imagelisting => each img thumbnail gets max-width and if JavaScript is turned on IE 6 also gets 'max-width' by using jQuery (otherwise overflowed image in IE 6 is hidden)

--- a/src/main/resources/web/themes/default/view-image-listing.css
+++ b/src/main/resources/web/themes/default/view-image-listing.css
@@ -28,13 +28,13 @@ ul.vrtx-image-listing {
 
 .vrtx-image-container {
   margin-bottom:15px;
-  max-height: 188px;
+  height: 188px;
   width: 250px;
   overflow: hidden;
 }
 
-* html .vrtx-image-container {
-  height: 188px;
+.vrtx-image-container img {
+  max-height: 188px;	
 }
 
 /* IE 7 better downscaling */
